--- a/c00.configure-static-network.md
+++ b/c00.configure-static-network.md
@@ -40,6 +40,17 @@ DNS=8.8.8.8 8.8.4.4
 
 after save above file.
 
+next:
+
+```bash
+vim /etc/systemd/resolved.conf
+```
+
+append
+```
+DNS=8.8.8.8 8.8.4.4
+```
+
 ## 3. Enable systemd-networkd
 
 ```bash
