--- a/2.install-cinnamon-gnome-desktop.md
+++ b/2.install-cinnamon-gnome-desktop.md
@@ -109,6 +109,24 @@ nvidia-smi
 
 `pacman -S xf86-video-amdgpu mesa amdvlk`
 
+and go to 
+
+```
+# vim /etc/mkinitcpio.conf
+```
+
+append
+
+```
+MODULES=(amdgpu)
+```
+
+remake initcpio
+
+```
+mkinitcpio -p linux
+```
+
 ### if Virtual Box
 
 `pacman -S mesa`
