--- a/1.install-archlinux-with-efi-and-gpt-without-gui.md
+++ b/1.install-archlinux-with-efi-and-gpt-without-gui.md
@@ -364,7 +364,7 @@ this <UUID> should be </dev/md/md0p1>'s UUID
 #### 4-B-10 genfstab
 
 ```
-genfstab /mnt -p -U >> /mnt/etc/fsbab
+genfstab /mnt -p -U > /mnt/etc/fsbab
 ```
 
 #### 4-B-11 Chroot
@@ -391,8 +391,17 @@ BINARIES=(mdmon)
 
 `mkinitcpio -p linux`
 
-## 5. Configure  mirror list for install arch-Linux and pacman
+## 5. Configure  mirror lists for install arch-Linux and pacman
 
+### 5.1 Auto select best mirror lists
+
+```
+# pacman -S reflector 
+# reflector --sort rate -l 5 --save /etc/pacman.d/mirrorlist
+```
+   
+### 5.2 Manual config. 
+ 
 1st, please go here
 https://www.archlinux.org/mirrorlist/all/
 to update your mirror list
