--- a/3.install-good-tools-for-archlinux.md
+++ b/3.install-good-tools-for-archlinux.md
@@ -16,7 +16,7 @@ crda #Wireless manager. (Install it to solve dmesg error: platform regulatory.0:
 man
 lshw
 simplescreenrecorder #record screen
-xsel # cmd | xclip -ib , to copy stdout to clipboard
+xsel # cmd | xsel -ib , to copy stdout to clipboard
 pixz pigz # parallel compress/decompress for xz and gz
 evince #(gnome pdf viewer)
 pinta #(good paint tool on the linux)
