--- a/2.install-cinnamon-gnome-desktop.md
+++ b/2.install-cinnamon-gnome-desktop.md
@@ -197,7 +197,7 @@ pacman –S firefox
 install 繁體中文與字體
 
 ```bash
-sudo pacman -S noto-fonts noto-fonts-cjk noto-fonts-emoji wqy-zenhei ttf-arphic-ukai
+sudo pacman -S noto-fonts noto-fonts-cjk noto-fonts-emoji wqy-zenhei ttf-arphic-ukai noto-fonts-emoji
 ```
 
 or refer to:
