--- a/2.install-cinnamon-gnome-desktop.md
+++ b/2.install-cinnamon-gnome-desktop.md
@@ -259,7 +259,11 @@ echo "X-GNOME-Autostart-enabled=false" >> ~/.config/autostart/nm-applet.desktop
 reboot
 ```
 
+### 7-5 Install manjaro theme
 
+```
+yay -S qogir-icon-theme matcha-gtk-theme
+```
 
 ## 8. If install gnome
 
