--- a/2.install-cinnamon-gnome-desktop.md
+++ b/2.install-cinnamon-gnome-desktop.md
@@ -167,10 +167,10 @@ and lock-screen-package by yay
 yay -S light-locker-settings 
 ```
 
-Install gnome-terminal for first terminal in GUI
+Install xfce4-terminal for first terminal in GUI
 
 ```bash
-pacman –S gnome-terminal xterm #(xterm for backup termaina)
+pacman –S xfce4-terminal xterm #(xterm for backup termaina)
 ```
 
 Start Cinnamon desktop
