--- a/3.install-good-tools-for-archlinux.md
+++ b/3.install-good-tools-for-archlinux.md
@@ -19,7 +19,7 @@ simplescreenrecorder #record screen
 xsel # cmd | xsel -ib , to copy stdout to clipboard
 pixz pigz # parallel compress/decompress for xz and gz
 evince #(gnome pdf viewer)
-pinta #(good paint tool on the linux)
+kolourpaint #(good paint tool on the linux)
 nomacs gimp #(viewer and editor for image)
 vlc #(video player)
 linux-headers #(build linux kernel modules for addtional driver)
