--- a/c05.configure-cups-printer.md
+++ b/c05.configure-cups-printer.md
@@ -45,19 +45,27 @@ localhost:631
 
 ![type_passwd_pic](image/username-passwd.PNG)
 
-### 3-4. Select "LPD/LPR Host or Printer", press Continue
+### 3-4. Select "IPP/IPPS/LPD/LPR Host or Printer", press Continue (Recommend ipp or ipps for fully function of printer)
 
-![select_LPD_LPR_pic](image/selection_003.png)
+* If IPPs can't use after you print, replace ipps with ipp
 
-### 3-5. Type "socket://<your_printer_ip>:9100", press Continue
+![](https://i.imgur.com/mK8H4VV.png)
 
-![type_your_printer_ip_pic](image/selection_004.png)
+### 3-5. Type IP, press Continue
+
+* socket://<your_printer_ip>:9100 for LPD
+* ipps://<your_printer_ip> for ipp
+* ipps://<your_printer_ip> for ipps
+
+![](https://i.imgur.com/gR1JPhN.png)
 
 ### 3-6. Type these data
 
 ![typed_data_pic](image/selection_005.png)
 
-### 3-7. Select PPD driver
+### 3-7. Select driver
+
+#### 3-7-1 LPD
 
 PPD driver can be download on your manufacturer of printer.
 
@@ -70,6 +78,12 @@ press "Continue"
 ![select_ppd_driver_pic_1](image/selection_006.png)
 
 ![select_ppd_driver_pic_2](image/selection_007.png)
+
+#### 3-1-2 ipp/ipps
+
+Recommend driver will show up if you've installed *hplip*
+
+![](https://i.imgur.com/o4T9ufM.png)
 
 ### 3-7. Select A4 size for default
 
