--- a/2.install-cinnamon-gnome-desktop.md
+++ b/2.install-cinnamon-gnome-desktop.md
@@ -25,77 +25,37 @@ And install it :
 #### (1) Install dependency
 
 ```
-# pacman -S nvidia nvidia-utils nvidia-settings xorg-server-devel opencl-nvidia
+# pacman -S nvidia-open-dkms
+# only support after GTX1650
 ```
-#### (2) Add pacman hook to compile module on kernel upgrades
-
-```
-# vim /etc/pacman.d/hooks/nvidia.hook
-```
-
-fill
-
-```
-[Trigger]
-Operation=Install
-Operation=Upgrade
-Operation=Remove
-Type=Package
-Target=nvidia
-Target=linux
-# Change the linux part above and in the Exec line if a different kernel is used
-
-[Action]
-Description=Update Nvidia module in initcpio
-Depends=mkinitcpio
-When=PostTransaction
-NeedsTargets
-Exec=/bin/sh -c 'while read -r trg; do case $trg in linux) exit 0; esac; done; /usr/bin/mkinitcpio -P'
-```
-
-#### (3) Blacklist nouveau driver
+#### (2) Blacklist nouveau driver
 
 ```
 sudo bash -c "echo blacklist nouveau > /etc/modprobe.d/blacklist-nvidia-nouveau.conf"
 ```
+#### (3)
 
-#### (4) Add graphics card configuration in Xorg server
-
-```
-# nvidia-xconfig
-```
-
-You can also check
+open
 
 ```
-cat /etc/X11/xorg.conf
+/boot/loader/entires/arch.conf
 ```
 
-#### (5) Load nvidia modules on boot – update firmware
+append kernel argument
 
 ```
-# vim /etc/mkinitcpio.conf
+options ibt=off
 ```
 
-append
+Regarding `ibt=off`, refer to [here](https://github.com/NVIDIA/open-gpu-kernel-modules/issues/256#issuecomment-1140425559)
 
-```
-MODULES=(nvidia nvidia_modeset nvidia_uvm nvidia_drm)
-```
-
-Finall, regenete *initramfs*
-
-```
-mkinitcpio -p linux
-```
-
-#### (6) Reboot 
+#### (4) Reboot 
 
 ```
 reboot
 ```
 
-#### (7) Check
+#### (5) Check
 
 ```
 xrandr --listproviders
