--- a/2.install-cinnamon-gnome-desktop.md
+++ b/2.install-cinnamon-gnome-desktop.md
@@ -96,6 +96,12 @@ reboot
 
 `pacman -S xf86-video-intel mesa vulkan-intel`
 
+and set 
+
+`options ibt=off`
+
+in the `/boot/loader/entries/arch.conf`
+
 ## 2. Install xorg
 
 ```bash
