--- a/a1.install-archlinux-+-win-10-with-efi-systemd-boot-and-gpt-without-gui.md
+++ b/a1.install-archlinux-+-win-10-with-efi-systemd-boot-and-gpt-without-gui.md
@@ -594,7 +594,12 @@ timeout 3
 editor no
 ```
 
+If your CPU is intel, add
+
+`options ibt=off`
+
  If fine, type`:wq` to leave.
+ 
 
 Create arch.conf \(my CPU is AMD-CPU\)
 
