--- a/1.install-archlinux-with-efi-and-gpt-without-gui.md
+++ b/1.install-archlinux-with-efi-and-gpt-without-gui.md
@@ -674,6 +674,10 @@ by command append of "`ls /boot >> /boot/loader/entries/arch.conf`"
 
 and "`blkid /dev/sda3 >> /boot/loader/entries/arch.conf`" :
 
+**If your CPU is intel, add:**
+
+`options ibt=off`
+   
 result likes below :
 
 ```text
