--- a/1.install-archlinux-with-efi-and-gpt-without-gui.md
+++ b/1.install-archlinux-with-efi-and-gpt-without-gui.md
@@ -396,8 +396,8 @@ BINARIES=(mdmon)
 ### 5.1 Auto select best mirror lists
 
 ```
-# pacman -S reflector 
-# reflector --sort rate -l 5 --save /etc/pacman.d/mirrorlist
+# pacman -S pacman-contrib 
+# rankmirrors -n 6 /etc/pacman.d/mirrorlist.backup > /etc/pacman.d/mirrorlist
 ```
    
 ### 5.2 Manual config. 
