--- a/1.install-archlinux-with-efi-and-gpt-without-gui.md
+++ b/1.install-archlinux-with-efi-and-gpt-without-gui.md
@@ -265,7 +265,7 @@ or
 #### NOTE: Why execute parted(gparted) before mdadm 
 
 [Refer to here](https://unix.stackexchange.com/questions/550497/mdadm-raid1-array-is-it-required-to-partition)
-
+and [here](https://unix.stackexchange.com/questions/320103/whats-the-difference-between-creating-mdadm-array-using-partitions-or-the-whole?newreg=68308adc859c43ceba3e638c07c49c37)
 
 ### 4-B-2. Create RAID-1:
 
