--- a/2.install-cinnamon-gnome-desktop.md
+++ b/2.install-cinnamon-gnome-desktop.md
@@ -340,7 +340,14 @@ New Mail Indicator
 TopIcons Plus 
 ```
 
-## 9. Install other good tools
+## 9. If install xfce4
+
+```
+sudo pacman -S xfce4 gvfs-mtp
+## gvfs-mtp + thunar-volman will auto mount removable flash drive
+```
+
+## 10. Install other good tools
 
 `Cinnamix-Rhino`
 
