--- a/3.install-good-tools-for-archlinux.md
+++ b/3.install-good-tools-for-archlinux.md
@@ -72,7 +72,8 @@ ttf-wps-fonts
 wps-office-mime
 wps-office-mui-zh-cn
 ttf-ms-fonts
-pango
+libtiff5 #necessary for wps -> pdf
+pango #recommend package for wps for laying out and rendering of text
 
 realvnc
 flameshot-git #(image cutter)
