--- a/2.install-cinnamon-gnome-desktop.md
+++ b/2.install-cinnamon-gnome-desktop.md
@@ -343,8 +343,10 @@ TopIcons Plus
 ## 9. If install xfce4
 
 ```
-sudo pacman -S xfce4 gvfs-mtp
+sudo pacman -S xfce4 xfce4-goodies gvfs-mtp lightdm lightdm-gtk-greeter lightdm-gtk-greeter-settings
 ## gvfs-mtp + thunar-volman will auto mount removable flash drive
+## xfce4-goodies: extra plugins
+## lightdm: lightdm lightdm-gtk-greeter lightdm-gtk-greeter-settings
 ```
 
 ## 10. Install other good tools
