--- a/c00.configure-static-network.md
+++ b/c00.configure-static-network.md
@@ -98,3 +98,16 @@ echo "nameserver 203.64.173.48\nnameserver 203.64.173.49\nnameserver 203.8.8.8\n
 ```
 
 again
+
+## 6. Configure DNS for PGP-Key
+
+Refer to [gpg: keyserver receive failed: Server indicated a failure](https://bbs.archlinux.org/viewtopic.php?id=259473&p=2) \#29
+
+And [Arch wiki](https://wiki.archlinux.org/title/Systemd-resolved)
+
+If your software relies on *glibc*, then that software will d DNS En/Decode with `/etc/resolv.conf`
+
+So please do:
+
+`# ln -sf ../run/systemd/resolve/stub-resolv.conf /etc/resolv.conf`
+
