--- a/2.install-cinnamon-gnome-desktop.md
+++ b/2.install-cinnamon-gnome-desktop.md
@@ -113,7 +113,10 @@ pacman -S xorg xorg-server mesa
 Install Cinnamon
 
 ```bash
-pacman -S cinnamon nemo-fileroller
+pacman -S cinnamon nemo-fileroller gnome-theme-extra
+# if gnome-theme-extra doesn't be installed, then Warning
+# Current gtk theme is not known to have nemo support......
+# would bother you when you launch GUI with terminal
 ```
 
 Install LightDM\(Light-desktop manager\)
