--- a/2.install-cinnamon-gnome-desktop.md
+++ b/2.install-cinnamon-gnome-desktop.md
@@ -67,7 +67,7 @@ nvidia-smi
 
 ### if AMD VGA :
 
-`pacman -S xf86-video-amdgpu mesa amdvlk`
+`pacman -S xf86-video-amdgpu mesa vulkan-radeon`
 
 and go to 
 
