--- a/2.install-cinnamon-gnome-desktop.md
+++ b/2.install-cinnamon-gnome-desktop.md
@@ -16,7 +16,7 @@ lspci | grep -e VGA -e 3D
 
 Select your driver below table :
 
-![vga_driver](image/vga_driver.PNG)
+![vga_driver]([image/vga_driver.PNG](https://i.imgur.com/vKM8eXq.png))
 
 And install it :
 
