--- a/c03.configure-fcitx-chewing.md
+++ b/c03.configure-fcitx-chewing.md
@@ -34,17 +34,21 @@ open `~/.config/fcitx5/conf/classicui.conf`
 append:
 
 ```text
-# 垂直候选列表
-Vertical Candidate List=
-
-# 按屏幕 DPI 使用
+# Vertical Candidate List
+Vertical Candidate List=True
+# Use Per Screen DPI
 PerScreenDPI=True
-
-# Font (设置成你喜欢的字体)
+# Use mouse wheel to go to prev or next page
+WheelForPaging=True
+# Font
 Font="思源黑体 CN Medium 13"
-
-# 主题
+# Menu Font
+MenuFont="Sans 10"
+# Use input method langauge to display text
+UseInputMethodLangaugeToDisplayText=True
+# Theme
 Theme=Material-Color-Brown
+
 ```
 
 ## 6. Go to Fcitx Configuration, disable "show preedit in application"
@@ -53,4 +57,8 @@ Theme=Material-Color-Brown
 
 If dones't disable it, some editor will have a problme.
 
-## 7.reboot to test
+## 7. Suggestion of chewing addon
+
+![](https://i.imgur.com/ihvYUZA.png)
+
+## 8.reboot to test
