--- a/3.install-good-tools-for-archlinux.md
+++ b/3.install-good-tools-for-archlinux.md
@@ -12,6 +12,7 @@ ntfs-3g exfat-utils #driver for andorid-fs-ts, ntfs, exfat
 libusb libusb-compat usbutils usbmuxd #(for usb)
 gnome-system-monitor
 gnome-calculator
+ttf-hack # for terminal font
 crda #Wireless manager. (Install it to solve dmesg error: platform regulatory.0: Direct firmware load for regulatory.db failed with error -2)
 man
 lshw
@@ -28,14 +29,14 @@ linux-headers #(build linux kernel modules for addtional driver)
 thunderbird #(outside party mail manager)
 system-config-printer cups #(see C5. Good tool for setting up printer, or you can install manually)
 #atom #(see: C1. Configure Atom editor)
-code #(see: C4. Configure vscode that like atom editor)
+#code #(see: C4. Configure vscode that like atom editor) (please install aur version due to functuion of remote account syncing)
 #gedit hspell libvoikko nuspell # Don't forget enable <Quick Highlight> in <preference->Plugin>  , good text amd code editor
 wget
-p7zip unrar #(rar and 7z supported)
+#p7zip unrar #(rar and 7z supported) #(security issue because of author disappear, please install aur version)
 # networkmanager # auto satisfied by firefox
-# network-manager-applet #(attach to GUI setting), auto satisfied by cinnamon
+# network-manager-applet #(attach to GUI setting, auto satisfied by cinnamon)
 libpng12 #(for lots of old applictions)
-whipper #Exact Audio Copy
+#whipper #(Exact Audio Copy)
 lib32-libpng12 #(for lots of old applictions)
 arch-install-scripts #(include genfstab)
 gnu-netcat
@@ -59,39 +60,39 @@ xorg-font-util
 
 ```bash
 brave-bin
+visual-studio-code-bin
+7-zip-full
 
-#
-ttf-hack # for terminal
-ttf-paratype # for PT Mono / coding
+# fonts
+consolas-font #for terminal #can't install with yay, must modify xorg-font-utils of denpendency in PKGBUILD file
+ttf-ms-fonts # for Courier New, Georgia, Times New Roma
+ttf-paratype #good fonts for coding (like PT mono)
+ttf-meslo # for meslo
+ttf-monaco # for monaco
+
 
 # WPS
 wps-office
 wps-office-fonts
 ttf-wps-fonts
-
-#
 wps-office-mime
 wps-office-mui-zh-cn
 ttf-ms-fonts
 libtiff5 #necessary for wps -> pdf
 pango #recommend package for wps for laying out and rendering of text
 
-realvnc
-flameshot-git #(image cutter)
+#remote apps
+#realvnc
+anydesk
 
-ttf-wps-fonts
 drawio-desktop-bin
-haroopad # good editor for markdown
+#haroopad # good editor for markdown
 
 downgrade #downgrade package of pacman, suggest to use local
 ezusb # smart card dirver for EZ100PU
 # These are suggestion for font
 #ttf-google-fonts-git #good fonts for coding (like PT mono), but too heavey
-consolas-font #for terminal #can't install with yay, must modify xorg-font-utils of denpendency in PKGBUILD file
-ttf-ms-fonts # for Courier New, Georgia, Times New Roma
-ttf-paratype #good fonts for coding (like PT mono)
-ttf-meslo # for meslo
-ttf-monaco # for monaco
+
 ```
 
 ## 3. Developer tools \(pacman\)
