--- a/2.install-cinnamon-gnome-desktop.md
+++ b/2.install-cinnamon-gnome-desktop.md
@@ -22,10 +22,12 @@ And install it :
 
 ### if nvidia VGA :
 
+Ref to here [NVIDIA](https://wiki.archlinux.org/title/NVIDIA) and [Hardware video acceleration](https://wiki.archlinux.org/title/Hardware_video_acceleration#VDPAU_drivers)
+
 #### (1) Install dependency
 
 ```
-# pacman -S nvidia-open-dkms
+# pacman -S nvidia-open-dkms  nvidia-utils
 # only support after GTX1650
 ```
 #### (2) Blacklist nouveau driver
@@ -67,7 +69,9 @@ nvidia-smi
 
 ### if AMD VGA :
 
-`pacman -S xf86-video-amdgpu mesa vulkan-radeon`
+Ref to here [AMDGPU](https://wiki.archlinux.org/title/AMDGPU) and [Hardware video acceleration](https://wiki.archlinux.org/title/Hardware_video_acceleration#VDPAU_drivers)
+
+`pacman -S xf86-video-amdgpu mesa vulkan-radeon libva-mesa-driver  mesa-vdpau`
 
 and go to 
 
@@ -94,8 +98,10 @@ reboot
 
 ### if Intel VGA :
 
-`pacman -S xf86-video-intel mesa vulkan-intel`
+Ref to here [Intel graphics](https://wiki.archlinux.org/title/Intel_graphics) and [Hardware video acceleration](https://wiki.archlinux.org/title/Hardware_video_acceleration#VDPAU_drivers)
 
+`pacman -S  mesa vulkan-intel  intel-media-driver libva-intel-driver.`
+`xf86-video-intel # old Gen2-Gen9`
 and set 
 
 `options ibt=off`
