--- a/1.install-archlinux-with-efi-and-gpt-without-gui.md
+++ b/1.install-archlinux-with-efi-and-gpt-without-gui.md
@@ -396,7 +396,9 @@ BINARIES=(mdmon)
 ### 5.1 Auto select best mirror lists
 
 ```
-# pacman -S pacman-contrib 
+# pacman -S pacman-contrib
+# mv /etc/pacman.d/mirrorlist /etc/pacman.d/mirrorlist.backup
+#### uncomment # of you're intreseted mirror site in /etc/pacman.d/mirrorlist.backup ####
 # rankmirrors -n 6 /etc/pacman.d/mirrorlist.backup > /etc/pacman.d/mirrorlist
 ```
    
