--- a/c00.configure-static-network.md
+++ b/c00.configure-static-network.md
@@ -111,3 +111,9 @@ So please do:
 
 `# ln -sf ../run/systemd/resolve/stub-resolv.conf /etc/resolv.conf`
 
+or on the `/etc/systemd/resolved.conf` add `Domain=~.`
+```
+[Resolve]
+DNS=192.168.35.1 fd7b:d0bd:7a6e::1
+Domains=~.
+``
