--- a/c09.config-vim.md
+++ b/c09.config-vim.md
@@ -1,3 +1,4 @@
+## Set `~/.vimrc`
 on the ~/.vimrc file
 
 ```.vimrc
@@ -7,4 +8,10 @@ set tabstop=2 "tab size
 set shiftwidth=2 "indent size
 set ai "auto indent
 syntax on "syntax coloring
+```
+
+## Vim error `E510: Can t make backup file (add ! to write anyway)`
+
+```
+rm -rf ~/.cache/vim
 ```
