--- a/3.install-good-tools-for-archlinux.md
+++ b/3.install-good-tools-for-archlinux.md
@@ -16,13 +16,11 @@ ttf-hack # for terminal font
 crda #Wireless manager. (Install it to solve dmesg error: platform regulatory.0: Direct firmware load for regulatory.db failed with error -2)
 man
 lshw
-notepadqq
-simplescreenrecorder #record screen
+gedit
 xsel # cmd | xsel -ib , to copy stdout to clipboard
 pixz pigz # parallel compress/decompress for xz and gz
 evince #(gnome pdf viewer)
 kolourpaint #(good paint tool on the linux)
-nomacs gimp #(viewer and editor for image)
 vlc #(video player)
 linux-headers #(build linux kernel modules for addtional driver)
 # flameshot #(image cutter)
@@ -59,6 +57,8 @@ xorg-font-util
 ## 2. There are can be install by yay
 
 ```bash
+nomacs
+simplescreenrecorder
 brave-bin
 visual-studio-code-bin
 7-zip-full
