--- a/c03.configure-fcitx-chewing.md
+++ b/c03.configure-fcitx-chewing.md
@@ -3,7 +3,7 @@
 ## 1. Install package
 
 ```text
-sudo pacman -S fcitx5-im fcitx5-configtool fcitx5-chewing fcitx5-anthy fcitx5-material-color fcitx5-qt fcitx5-gtk
+sudo pacman -S fcitx5-im fcitx5-configtool fcitx5-chewing fcitx5-mozc fcitx5-material-color fcitx5-qt fcitx5-gtk
 ```
 
 ## 2. Go to keyboard, set layout as
@@ -61,4 +61,8 @@ If dones't disable it, some editor will have a problme.
 
 ![](https://i.imgur.com/ihvYUZA.png)
 
-## 8.reboot to test
+## 8. Go to fcitx-5config, set input up/ down
+
+![](https://i.imgur.com/BKbQwXx.png)
+
+## 9 .reboot to test
