--- a/3.install-good-tools-for-archlinux.md
+++ b/3.install-good-tools-for-archlinux.md
@@ -62,6 +62,8 @@ simplescreenrecorder
 brave-bin
 visual-studio-code-bin
 7-zip-full
+#tcl
+tcllib
 
 # fonts
 consolas-font #for terminal #can't install with yay, must modify xorg-font-utils of denpendency in PKGBUILD file
