--- a/3.install-good-tools-for-archlinux.md
+++ b/3.install-good-tools-for-archlinux.md
@@ -122,10 +122,13 @@ hdf5 vtk glew #(dependency for opencv)
 #(delete -lopencv_viz)
 python-numpy python-matplotlib python-pylint python-pillow
 ruby-ronn # (convert .md to linux man)
-# nodejs node-gyp electron
 go
 rustup #After installed, do rustup install stable && rustup default stable
 graphviz #language for flowc-hart and fsm-chart
+
+# tools for build linux kernel
+xmlto kmod inetutils libelf perl tar xz cpio bc git
+uboot-tools
 ```
 
 ### 3-2. Need to be installed separately\(Does not use shell\)
