--- a/3.install-good-tools-for-archlinux.md
+++ b/3.install-good-tools-for-archlinux.md
@@ -213,3 +213,19 @@ Execute above script on terminal :
 ```bash
 yes | sudo sh install.sh install_list_pacman
 ```
+
+## 7. Speed up `compressing pacakge...` for `makepkg`
+
+Refer to [here](https://bbs.archlinux.org/viewtopic.php?id=232638)
+
+Replace
+```
+PKGEXT='.pkg.tar.xz'
+SRCEXT='.src.tar.gz'
+```
+with
+```
+PKGEXT='.pkg.tar'
+SRCEXT='.src.tar'
+```
+
