--- a/2.install-cinnamon-gnome-desktop.md
+++ b/2.install-cinnamon-gnome-desktop.md
@@ -352,11 +352,11 @@ TopIcons Plus
 ## 9. If install xfce4
 
 ```
-sudo pacman -S xfce4 xfce4-goodies gvfs-mtp lightdm lightdm-gtk-greeter lightdm-gtk-greeter-settings gnome-keyring gnome-shell gdm
+sudo pacman -S xfce4 xfce4-goodies gvfs-mtp lightdm lightdm-gtk-greeter lightdm-gtk-greeter-settings gnome-keyring gnome-shell
 ## gvfs-mtp + thunar-volman will auto mount removable flash drive
 ## xfce4-goodies: extra plugins
 ## lightdm: lightdm lightdm-gtk-greeter lightdm-gtk-greeter-settings
-## gnome-keyring gnome-shell gdm: refer to here: https://gitlab.gnome.org/GNOME/gnome-keyring/-/issues/28 
+## gnome-keyring gnome-shell: refer to here: https://gitlab.gnome.org/GNOME/gnome-keyring/-/issues/28 
 ```
 
 ## 10. Install other good tools
