--- a/2.install-cinnamon-gnome-desktop.md
+++ b/2.install-cinnamon-gnome-desktop.md
@@ -352,11 +352,12 @@ TopIcons Plus
 ## 9. If install xfce4
 
 ```
-sudo pacman -S xfce4 xfce4-goodies gvfs-mtp lightdm lightdm-gtk-greeter lightdm-gtk-greeter-settings gnome-keyring gnome-shell
+sudo pacman -S xfce4 xfce4-goodies gvfs-mtp lightdm lightdm-gtk-greeter lightdm-gtk-greeter-settings gnome-keyring gnome-shell gst-libav
 ## gvfs-mtp + thunar-volman will auto mount removable flash drive
 ## xfce4-goodies: extra plugins
 ## lightdm: lightdm lightdm-gtk-greeter lightdm-gtk-greeter-settings
-## gnome-keyring gnome-shell: refer to here: https://gitlab.gnome.org/GNOME/gnome-keyring/-/issues/28 
+## gnome-keyring gnome-shell: refer to here: https://gitlab.gnome.org/GNOME/gnome-keyring/-/issues/28
+## gst-libav: H264 for Parole(xfce env. component)
 ```
 
 ## 10. Install other good tools
