--- a/2.install-cinnamon-gnome-desktop.md
+++ b/2.install-cinnamon-gnome-desktop.md
@@ -312,11 +312,11 @@ vi /etc/gdm/custom.conf
 
 Then uncomment the line below to force the login screen to use Xorg display manager.
 
-WaylandEnable=false
+`WaylandEnable=false`
 
-And add the following line to the [daemon] section as well.
+And add the following line to the `[daemon] ` section as well.
 
-DefaultSession=gnome-xorg.desktop
+`DefaultSession=gnome-xorg.desktop`
 
 The whole GDM configuration file should now look like this.
 
