--- a/1.install-archlinux-with-efi-and-gpt-without-gui.md
+++ b/1.install-archlinux-with-efi-and-gpt-without-gui.md
@@ -455,6 +455,11 @@ base-devel include basic software development tools.
 
 Such as gcc g++ ... etc.
 
+### 6.1 If ranked `mirrorlist`
+```bash
+cp /etc/pacman.d/mirrorlis /mnt/etc/pacman.d/mirrorlis
+```
+
 ## 7. Generate file system table
 
 When Linux boots, it can automatically mount devices in fstab.
